--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>James Turner Portfolio</title>
+  <title>James Turner</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/icon.png">
   <link rel="stylesheet" href="style.css">
   <!-- Font Awesome icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pk6p5Yf7hQ6Q8a8OjY/8Lu8Qh1g9zxA+7rXz+ZPN6Fid4HvdJhju5ig3qF4J1r5W/o4e6OcG2Xjg2zzYTh3vEg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
