--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,9 @@
 
   <section class="contact-section">
     <div class="contact-content">
-      <h1>Send Me a Message</h1>
+      <h1>Send Me a Message Here<br>
+        <span class="contact-email-note">(or email james.turner987@outlook.com)</span>
+      </h1>
       <form action="https://formspree.io/f/mblanjgk" method="POST">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" required>
