--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <!-- About Me Section (now first after main) -->
   <section id="about" class="about-section">
     <div class="about-image-container">
-      <img src="profile.png" alt="Profile Picture" class="profile-pic">
+      <img src="images/profile.png" alt="Profile Picture" class="profile-pic">
     </div>
     <div class="about-text-container">
       <h2>About Me</h2>
@@ -85,14 +85,14 @@
       <div class="about-subsection">
         <h3>Education</h3>
         <p>
-          I completed my GCSEs at the Moulton School and Science College, obtaining 11 GCSEs (6 A*-A, 5 B) and 3 A-Levels (ABB), achieving awards of academic excellence throughout my GCSE study and the Physics Award for Academic Excellence during A-Levels. I am currently pursuing an Mphys in Physics with Astrophysics at the University of Leicester, expected graduation in 2026. Notable modules include General Relativity and Quantum Fields, Supermassive Black Holes and Exoplanets, and Quantum Mechanics, alongside practical coursework in Python programming and data analysis. During my third year I undertook a research project working under Dr Matt Burleigh observing transiting exoplanets and using the photometric decrease in observed flux from a host start to calculate planetary radii. -Add about dissertation here-
+          I completed my GCSEs at Moulton School and Science College, obtaining 11 GCSEs (6 A*-A, 5 B) and 3 A-Levels (ABB), achieving awards of academic excellence throughout my GCSE study and the Physics Award for Academic Excellence during A-Levels. I am currently pursuing an Mphys in Physics with Astrophysics at the University of Leicester, expected graduation in 2026. Notable modules include General Relativity and Quantum Fields, Supermassive Black Holes and Exoplanets, and Quantum Mechanics, alongside practical coursework in Python programming and data analysis. During my third year I undertook a research project working under Dr Matt Burleigh observing transiting exoplanets and using the photometric decrease in observed flux from a host start to calculate planetary radii. -Add about dissertation here-
 
         </p>
       </div>
       <div class="about-subsection">
         <h3>Hobbies</h3>
         <p>
-          Throughout my life I have had a variety of hobbies and interests, sports have been an integral part of my day-to-day life since a young age. Competing in football for different teams my entire life, climbing for over 5 years, and now at university competing nationally in both swimming and dodgeball. Since beginning university I sparked an interest in astrophotography, using the University of Leicester's observatory to take long exposure images of night sky subjects such as Orions Nebula and the solar system's planets. Other hobbies include computing and technology, since a young age I have had a passion for technology and computers, and have challenged myself to learn new skills in this area, such as building my own computer and learning programming languages such as Python and Javascript to make websites.
+          Throughout my life I have had a variety of hobbies and interests, with sports being an integral part of my daily life from a young age. Competing in football for different teams my entire life, climbing for over 5 years, and now at university competing nationally in both swimming and dodgeball. Since beginning university I sparked an interest in astrophotography, using the University of Leicester's observatory to take long exposure images of night sky subjects such as Orions Nebula and the solar system's planets. Beyond my photography and sporting interests, I have always had a strong passion for computing and technology, and have consistently challenged myself to learn new skills in this area, such as building my own computer and learning programming languages such as Python and JavaScript to make websites.
         </p>
       </div>
       <div class="about-subsection">
